@@ -1,6 +1,6 @@
 nodistdir=`pwd`
 
-INCLUDES = \
+AM_CPPFLAGS = \
 	-I$(top_srcdir)/common_utilities\
 	-I$(top_srcdir)/include
 
